hot reload on client works

--- a/views/index.pug
+++ b/views/index.pug
@@ -2,6 +2,7 @@
 doctype html
 html
   head
-    title= 'biscut'
+    title= "lemon"
+    script(src="/reload/reload.js") 
   body
     block content
