--- a/views/index.pug
+++ b/views/index.pug
@@ -4,7 +4,12 @@ html
   head
     title= title
     script(src="/reload/reload.js") 
+    script(src="https://unpkg.com/htmx.org@2.0.1" integrity="sha384-QWGpdj554B4ETpJJC9z+ZHJcA/i59TyjxEPXiiUgN2WmTyV5OEZWCD6gQhgkdpB/" crossorigin="anonymous")
+    script(src="https://unpkg.com/@lottiefiles/lottie-player@latest/dist/lottie-player.js")
     base(href="/")
     link(rel='stylesheet' type= 'text/css' href='/styles.css')
+
   body
-    h1.text-red-600 #{title}
+    h1.text-green-600.bg-slate-900 #{title}
+    button(hx-post="/basket" hx-trigger="click") Click me
+      lottie-player.htmx-indicator(src="https://lottie.host/15b9493e-9c63-40f6-b52c-985235501a1e/iLTJ0KXg77.json" background="##ffffff" speed="1" style="width: 300px; height: 300px" loop autoplay direction="1" mode="normal")
