--- a/assets/main.css
+++ b/assets/main.css
@@ -3,5 +3,22 @@
 @tailwind utilities;
 
 body {
-    height: 100vh;
+  height: 100vh;
+}
+
+.modal {
+  display: none;
+  position: fixed;
+  z-index: 1;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  overflow: auto;
+  background-color: rgb(0, 0, 0);
+  background-color: rgba(0, 0, 0, 0.4);
+}
+
+.modal.htmx-request {
+  display: block;
 }
